--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,8 @@ jobs:
 
     - name: deps
       run: |
-        sudo apt install -y \
+        sudo apt-get update
+        sudo apt-get install -y \
         cmake \
         xorg-dev \
         libglu1-mesa-dev \
