--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -18,11 +18,9 @@ install(TARGETS raytracer DESTINATION .)
 # Build tests
 add_executable(tests
   tests.cpp
-  ../framework/shape.cpp
-  ../framework/sphere.cpp
-  ../framework/box.cpp
   )
 target_link_libraries(tests
   ${GLFW_LIBRARIES}
+  ${FRAMEWORK_NAME}
   )
 
